css/civicrm.css
/* $Id$ */


#crm-container label {
  font-weight: normal;
  display: inline;
}

#crm-container .hiddenElement {
    display   	    : none;
}

#crm-container .clear {
    clear 	    : both;
}


/* TABLE STYLING */

#crm-container table {
  margin: .5em .1em .5em;
  width: 99%;
  border-collapse: collapse;
  border: 1px solid #DDD;
}

#crm-container th,
#crm-container table.display thead th {
  	font-weight: normal;
  	font-size: 1em;
  	padding: 4px;
  	border:1px solid #CCC;	
  	text-align: left;
  	vertical-align: top;
  	background-color: #E6E6E6;
	}

#crm-container tbody{
    border-top: none
}

#crm-container tr {
  font-size: .95em;
}

#crm-container td {
  padding: 4px;
  vertical-align: top;
}

#crm-container tr.even, 
#crm-container tr.odd, 
#crm-container tbody th {
	border-color:#DDD;
	}


#crm-container tr.even-row td, 
#crm-container tr.odd-row td,
#crm-container table.display td {
  border-collapse: collapse;
  border-top: 1px solid #DDDDDD;
  border-right: 1px solid #DDDDDD;
}
	#crm-container .odd-row, 
	tbody.scrollContent {
	  background-color: #FAFAFA;
	}
	#crm-container .even-row, 
	tbody.scrollContent tr.alternateRow {
	  background-color: #F5F5F5;
	}

#crm-container .row-selected {
  margin: 0px;
  padding: 3px 0px 3px 0px;
  clear: none;
  background-color: #FAFAD2;
}


/*
** Size input fields in crm-container by class. Classes are assigned by the
** module in relation to the data object max size.
*/
#crm-container .two {width: 2em;}
#crm-container .four {width: 4em;}
#crm-container .six {width: 6em;}
#crm-container .eight {width: 8em;}
#crm-container .twelve {width: 12em;}
#crm-container .twenty {width: 20em;}
#crm-container .medium {width: 12em;}
#crm-container .big {width: 15em;}
#crm-container .huge {width: 25em;}
#crm-container .huge40 {width: 40em;}
#crm-container textarea.big {width: 35em; height: 4em;}
#crm-container textarea.huge {width: 45em; height: 16em;}
#crm-container textarea.huge12 {width: 40em; height: 12em;}
#crm-container textarea.huge40 {width: 40em; height: 16em;}
#crm-container textarea.nowrap {width: 45em; height: 4.5em; white-space: nowrap; overflow: auto;}
#crm-container .bigSelect {width: 15em; height: 12em;}


/*
** Override line-height from style.css
*/
div#crm-container {
    line-height: 135%;
}

/* Base #crm-container styles */

#crm-container hr {
   background-color : #B0B0B0;
	}

#crm-container select {
  	vertical-align: middle;
  	border: 1px solid #999;
	}

#crm-container textarea {
    border: 1px solid #999;
}


/*
** class for hiding the text box; it is used in the OtherActivity template 
** for showing the descrition of activity type element.
*/
#crm-container .texttolabel, #crm-container .no-border {
 border-style: none;
}

/*
** Class for giving solid line at the bottom of the <div>(block level element)
** Currently it is used on the dashboard pages - CiviContribute, CiviMember...
*/
#crm-container div.solid-border-bottom {
 border-bottom: 2px solid #777;
}

#crm-container div.solid-border-top {
 margin-top: 15px;
 border-top: 1px solid #696969;}

/*
** Size the verticle heights in crm-containers by class. 
*/
#crm-container .ht-one {
  height: 1em;
}

#crm-container .ht-two {
  height: 2em;
}

#crm-container .add-remove-link #crm-container .map-link {
  font-size: .9em;
}


/*
** CRM form layout classes (from www.realworldstyle.com)
*/
div.spacer, 
.spacer {
  clear: left;
  height: 5px;
  }



#crm-container td.compressed select, #crm-container td.compressed input {
  font-size: 0.90em;
  font-weight: bold;
}

#crm-container input[type="text"], #crm-container input[type="password"] {
  border: 1px solid #999;
  font-size:12px;
  font-size-adjust:none;
  font-stretch:normal;
  font-style:normal;
  font-variant:normal;
  font-weight:bold;
  line-height:100%;
  vertical-align:middle;
}


  
#crm-container .form-submit {
  margin: .25em 0.5em 0.25em 0;
}

#crm-container .form-submit-inline {
  margin: 0em 0.5em 0.25em 0em;
}

#crm-container fieldset{
    background-image   : none;
    margin             : .5em 0em .5em 0em;
}

#crm-container .boxBlock, #crm-container fieldset{
    background-color   : #F7F7F7;
    border	           : 1px solid #CCCCCC;
    border-radius      : 4px;	
    -moz-border-radius : 4px;	
    -webkit-border-radius : 4px;	
    -khtml-border-radius : 4px;	
}


#crm-container fieldset.form-layout {
  margin: .25em 0em .5em 0em;
  padding: 1px 10px 1px 10px;
}

#crm-container fieldset.collapsible {
  border: 0px;
}

#crm-container div.form-item {
  border-top-style: none;
  margin: 0px;
  padding: 3px 0px 5px 0px;
  clear: none;
	 overflow: auto; 
	}

#crm-container div.form-item dl, #crm-container .section-hidden dl{
 margin: 0;
}

/* Use definition lists for simple 2 col forms - <dt> for labels, <dd> for fields */
#crm-container div.form-item dt {
  float: left;
  clear: left;
  width: 22%;
  text-align: right;
  vertical-align: top;
  padding: 5px 15px 5px 0px;
  font-size: .95em;
  white-space: normal;
}

#crm-container .section-hidden dt {
  float: left;
  clear: left;
  width: 22%;
  text-align: left;
  font-weight: bold;
  white-space: nowrap;
  padding: 5px 15px 5px 0px;
}


#crm-container div.form-item dd, 
#crm-container .section-hidden dd {
 	padding: 5px;
 	margin-left:23%;
	}

#crm-container div.form-item dd.html-adjust, 
#crm-container div.form-item dl.html-adjust dd{
  width: 57%;
  /*clear: right;*/
}

#crm-container div.form-item dd.description {
 padding: 0px 0px 5px;
 white-space: normal;
}

#crm-container div.form-item span.labels {
  float: left;
  width: 25%;
  text-align: left;
}

#crm-container div.form-item span.fields {
  float: right;
  width: 75%;
  text-align: left;
} 

#crm-container table.form-layout, 
#crm-container table.control-panel, 
#crm-container table.no-border {
  margin: 0em;
  width: 98%;	
  border-collapse: collapse;
  border: 0px none;
}
/* ... */

